[tool.poetry]
name = "agents-venv"
version = "0.1.0"
description = ""
authors = ["Tajudeen Abdulazeez <tabdulazeez99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.11.0"
python-dotenv = "1.0.0"
unstructured = "^0.15.12"
opencv-python = "^4.10.0.84"
exa-py = "^1.1.7"
streamlit = "^1.38.0"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
